[project]
name = "maria-leads-lambda"
version = "0.1.0"
description = ""
authors = [
    {name = "LeonardoLeiteMeira",email = "leonardo.leitemeira10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "notion-client (>=2.3.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
